finished the project

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
         alt="image with Caleb"
       />
       <p>
-        Plot Caleb Smith, a programmer at the search engine company Blue Book,
-        wins an office contest for a one-week visit to the luxurious, isolated
-        home of the CEO, Nathan Bateman. Nathan lives there with an unspeaking
-        servant named Kyoko, who, according to Nathan, does not understand
-        English. Nathan reveals that he has built a humanoid robot named Ava
-        with artificial intelligence. Ava has already passed a simple Turing
-        test and Nathan wants Caleb to judge whether Ava is genuinely capable of
-        thought and consciousness, and whether he can relate to Ava despite
-        knowing she is artificial.
+        <span class="large-text">Caleb Smith</span>, a programmer at the search
+        engine company Blue Book, wins an office contest for a one-week visit to
+        the luxurious, isolated home of the CEO, Nathan Bateman. Nathan lives
+        there with an unspeaking servant named Kyoko, who, according to Nathan,
+        does not understand English. Nathan reveals that he has built a humanoid
+        robot named Ava with artificial intelligence. Ava has already passed a
+        simple Turing test and Nathan wants Caleb to judge whether Ava is
+        genuinely capable of thought and consciousness, and whether he can
+        relate to Ava despite knowing she is artificial.
       </p>
       <img
         src="https://static01.nyt.com/images/2015/05/21/fashion/21DISRUPTIONS/21DISRUPTIONS-superJumbo.jpg"
